# Measurement_reception

./: CMakeLists.txt  CsvReader.cpp  CsvReader.h  CsvWriter.cpp  CsvWriter.h  ManualMeasurements.h  PlotViewer.cpp  PlotViewer.h  PositionPlotViewer.cpp  PositionPlotViewer.h  README.md  RelativePositionCalculator.cpp  RelativePositionCalculator.h  RemoteDataHandler.cpp  RemoteDataHandler.h  RemoteDataInterpreter.cpp  RemoteDataInterpreter.h  TimeFormatter.cpp  TimeFormatter.h  VelocityCalculator.cpp  VelocityCalculator.h  main.cpp
PlotViewers/: PlotViewerVisitor.h  PositionPlotViewer.h  VelocityPlotViewer.cpp  VelocityPlotViewer.h
